@@ -1,6 +1,7 @@
 0.9.29
 Experimental custom search function
 Add clearlogo option to furniture
+Fix for season posters
 
 0.9.28
 Add Tri-Panel view
